fix copyright alignment issue

--- a/css/12_Footer.css
+++ b/css/12_Footer.css
@@ -105,7 +105,7 @@
 	.copyright{
 		position: static;
 		margin-top: 30px;
-		margin-right: 5.486vw;
+		margin-left: 8.486vw;
 		font-size: 3.18vw;
 		padding-bottom:30px;
 	}
